# taxi-analytics-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  jira-agent.yml
app/: README.md  dashboard.py
cli/: llm.py  main.py
dbt_project/: dbt_project.yml
dbt_project/models/marts/: mart_daily_kpis.sql  mart_hourly_patterns.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_yellow_trips.sql
dbt_project/tests/: assert_int_trips_enriched_no_fanout.sql  assert_int_trips_enriched_speed_within_bounds.sql  assert_int_trips_enriched_tip_pct_not_negative.sql  assert_mart_daily_kpis_unique_grain.sql  assert_mart_hourly_patterns_unique_grain.sql  assert_mart_trip_summary_metrics_positive.sql  assert_mart_trip_summary_revenue_reconciles.sql  assert_mart_trip_summary_trip_count_reconciles.sql  assert_mart_trip_summary_trip_date_within_range.sql  assert_mart_trip_summary_unique_grain.sql  assert_stg_yellow_trips_short_trip_distance_capped.sql  assert_stg_yellow_trips_within_filter_bounds.sql
reporting/: deck_builder.py
scripts/: jira_client.py
tests/: test_jira_client.py  test_llm.py  test_load_raw.py
