[project]
name = "taxi-analytics-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11",
    "dbt-duckdb>=1.10",
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "duckdb>=1.0",
    "streamlit>=1.38",
    "plotly>=5.24",
    "python-pptx>=1.0.2",
    "kaleido==0.2.1",
]

[project.scripts]
datatool = "cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "reporting*"]
